Bug: Fixes issue 23: Removed undefined variables from GxActiveRecord::saveRelated.
Chg: Removed the message translation from the generated view files.
Enh: Added a message category to the Yii::t calls.
Enh: Added the configuration file for generating message translations.
Enh: Added instructions and details about the patch and messages directory configuration.

Version 1.9, 2011-07-06
----------------------------
Bug: GxActiveRecord::getRelationLabel supported only relations and (table-based) attributes. Support for class properties has been added.
Chg: The method attributeLabels in the generated base model now have the FK fields set to null by default.
Chg: The method attributeLabels in the generated base model now have the relations of the model. They are set to null by default.
Chg: The method GxActiveRecord::label doesn't have the second parameter "ucwords" anymore. The same happens when it is overriden on the generated base model.
Chg: The method GxActiveRecord::getRelationLabel doesn't have the third parameter "ucwords" anymore.
Chg: Now the method GxActiveRecord::getRelationLabel gives priority to the explicitly defined label in the model.

Version 1.8, 2011-06-20
----------------------------
Enh: Added support to active record labels.

Version 1.7, 2011-06-02
----------------------------
Enh: Updated the code from Yii to version 1.1.7 (r3135).
Enh: Updated the code from Yii in the default template files and generator's index views to version 1.1.7 (r3135).
Bug: Fixed bug #10. Added proper support to 'uncheckValue'.
Bug: Fixes issue #11. Now the generated model::search method uses the current instance of the model and allows the use of custom criteria.

Version 1.6, 2011-05-09
----------------------------
Bug: Wrong pivot class name was generated when there were table prefixes.
Enh: Better support to boolean values: formatted display in view "view".
Bug: Added proper parameter checks in GxActiveRecord::__toString.
Chg: Raised Yii version in "requirements".