@@ -9,6 +9,7 @@ Chg: Removed the message translation from the generated view files.
 Enh: Added a message category to the Yii::t calls.
 Enh: Added the configuration file for generating message translations.
 Enh: Added instructions and details about the patch and messages directory configuration.
+Bug: GxActiveRecord::pkSeparator and GxActiveRecord::repColumnsSeparator shouldn't be static.
 
 Version 1.9, 2011-07-06
 ----------------------------
